--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea/
 # 可选：同时忽略IDEA生成的模块文件
 *.iml
+# 忽略extract-tool/outputs/outputs/default下的所有内容
+outputs/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
