--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.iml
 # 忽略extract-tool/outputs/outputs/default下的所有内容
 outputs/outputs/default/results.json
-outputs/
+/outputs/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -213,4 +213,3 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-
